<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/label_option_category_slush_pool" >
        <EditTextPreference
            android:key="settings_slush_api_key"
            android:summary="@string/label_option_slush_api_key_summary"
            android:title="@string/label_option_slush_api_key" />

        <PreferenceScreen
            android:dependency="settings_slush_api_key"
            android:title="@string/label_option_pool_additional_settings" >
            <CheckBoxPreference
                android:defaultValue="@bool/auto_connect"
                android:key="settings_slush_auto_connect"
                android:title="@string/label_option_auto_connect" />

            <EditTextPreference
                android:defaultValue="@string/connection_delay"
                android:dependency="settings_slush_auto_connect"
                android:inputType="number"
                android:key="settings_slush_connect_delay"
                android:title="@string/label_option_connection_delay" />

            <CheckBoxPreference
                android:defaultValue="@bool/show_hashrates"
                android:key="settings_slush_show_hashrates"
                android:summary="@string/label_option_suffix_hashrates_text_summary"
                android:title="@string/label_option_suffix_hashrates_text" />
            <CheckBoxPreference
                android:defaultValue="@bool/show_parsing_messages"
                android:key="settings_slush_show_messages_when_parsed"
                android:title="@string/label_option_show_when_parsed" />
        </PreferenceScreen>
    </PreferenceCategory>
        <PreferenceCategory android:title="@string/label_option_category_wemineltc_pool" >
        <EditTextPreference
            android:key="settings_wemineltc_api_key"
            android:summary="@string/label_option_wemineltc_api_key_summary"
            android:title="@string/label_option_wemineltc_api_key" />

        <PreferenceScreen
            android:dependency="settings_wemineltc_api_key"
            android:title="@string/label_option_pool_additional_settings" >
            <CheckBoxPreference
                android:defaultValue="@bool/auto_connect"
                android:key="settings_wemineltc_auto_connect"
                android:title="@string/label_option_auto_connect" />

            <EditTextPreference
                android:defaultValue="@string/connection_delay"
                android:dependency="settings_wemineltc_auto_connect"
                android:inputType="number"
                android:key="settings_wemineltc_connect_delay"
                android:title="@string/label_option_connection_delay" />

            <CheckBoxPreference
                android:defaultValue="@bool/show_hashrates"
                android:key="settings_wemineltc_show_hashrates"
                android:summary="@string/label_option_suffix_hashrates_text_summary"
                android:title="@string/label_option_suffix_hashrates_text" />
            <CheckBoxPreference
                android:defaultValue="@bool/show_parsing_messages"
                android:key="settings_wemineltc_show_messages_when_parsed"
                android:title="@string/label_option_show_when_parsed" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/label_option_category_mtgox_exchange_rate" >
        <CheckBoxPreference
            android:defaultValue="@bool/mtgox_enabled"
            android:key="settings_mtgox_enabled"
            android:summary="@string/label_option_mtgox_exchange_rate_enabled_summary"
            android:title="@string/label_option_mtgox_exchange_rate_enabled" />

        <PreferenceScreen
            android:dependency="settings_mtgox_enabled"
            android:title="@string/label_option_mtgox" >
            <EditTextPreference
                android:defaultValue="@string/mtgox_currency_exchange_fetch_rate"
                android:inputType="number"
                android:key="settings_mtgox_fetch_rate"
                android:summary="@string/label_option_mtgox_exchange_fetch_rate_summary"
                android:title="@string/label_option_mtgox_exchange_fetch_rate" />

            <ListPreference
                android:defaultValue="@string/mtgox_currency_type"
                android:entries="@array/supported_currencies_convertable_from_btc"
                android:entryValues="@array/supported_currencies_convertable_from_btc"
                android:key="settings_mtgox_currency_type"
                android:title="@string/label_option_currency_type" />

            <CheckBoxPreference
                android:defaultValue="@bool/mtgox_effect_block_table"
                android:key="settings_mtgox_effect_block_table"
                android:summary="@string/label_mtgox_effect_block_table_summary"
                android:title="@string/label_mtgox_effect_block_table" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/label_option_category_other" >
        <CheckBoxPreference
            android:defaultValue="@bool/check_connection_delays"
            android:key="settings_check_connection_delays"
            android:summary="@string/label_option_check_connection_delays_summary"
            android:title="@string/label_option_check_connection_delays" />

        <PreferenceScreen android:title="@string/label_option_advanced" >
            <CheckBoxPreference
                android:defaultValue="@bool/force_custom_user_agent"
                android:key="settings_force_use_backup_user_agent"
                android:summary="@string/label_option_force_use_backup_user_agent_summary"
                android:title="@string/label_option_force_use_backup_user_agent" />

            <EditTextPreference
                android:key="settings_backup_user_agent"
                android:summary="@string/label_option_backup_user_agent_summary"
                android:title="@string/label_option_backup_user_agent" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>