<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollPane"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MiningStatisticsActivity" >

        <TableLayout
            android:id="@+id/worker_table"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView5" >

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:text="@string/label_worker_table_header_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:text="@string/label_worker_table_header_rate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:text="@string/label_worker_table_header_share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_weight="1"
                    android:text="@string/label_worker_table_header_score" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmed_namecoin_reward_label"
            android:layout_marginTop="6dp"
            android:text="@string/label_worker_list_title" />

        <com.steve4448.jbitminingstats.NumberVal
            android:id="@+id/number_val_confirmed_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/confirmed_reward_label"
            android:layout_alignBottom="@+id/confirmed_reward_label"
            android:layout_alignParentRight="true"
            android:text="@string/label_number_stub"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/confirmed_namecoin_reward_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/confirmed_reward_label"
            android:layout_marginTop="6dp"
            android:text="@string/label_confirmed_namecoin_reward" />

        <com.steve4448.jbitminingstats.NumberVal
            android:id="@+id/number_val_confirmed_namecoin_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/confirmed_namecoin_reward_label"
            android:layout_alignBottom="@+id/confirmed_namecoin_reward_label"
            android:layout_alignParentRight="true"
            android:text="@string/label_number_stub"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/worker_hash_rate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="6dp"
            android:text="@string/label_worker_rate" />

        <com.steve4448.jbitminingstats.NumberVal
            android:id="@+id/number_val_worker_hash_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/label_number_stub"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/confirmed_reward_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/worker_hash_rate_label"
            android:layout_marginTop="6dp"
            android:text="@string/label_confirmed_reward" />
    </RelativeLayout>

</ScrollView>